04/ngx-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ngx
spec:
  rules:
    - host: k8s.castlerock.ai
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ngx
                port: 
                  number: 80
